added full window width class to Foundation; topbar experimentation

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -13,48 +13,22 @@
 
 <body>
 
-<!-- Navbar section -->
-<div class="contain-to-grid sticky">
-  <nav class="top-bar" data-topbar data-options="sticky-on: large">
-    <ul class="title-area">
-      <li class="name">
-        <h3><a id="company-name" href="#">HEALTH INSURANCE OPTIONS EAST BAY</a></h3>
-      </li>
-    </ul>
-    <section class="top-bar-section">
-      <ul class="right">
-        <li><a href="#">SERVICES</a></li>
-        <li><a href="#">CONTACT US</a></li>
-      </ul>
-    </section>
-  </nav>
-</div>
+<div class="hioebMainContainer">
+    <div class="row fullwidth">
+        <div class="top-bar">
+            <div class="top-bar-left">
+                THING LEFT
+            </div>
+<!-- PLACE BELOW IMAGE AS BACKGROUND HERE -->
+            <div class="top-bar-right">
+                THING RIGHT
+            </div>
+        </div>
+    </div>
 
-<div class="row">
-  <div class="large-12 columns">
-    <ul data-orbit>
-      <li><img src="http://lorempixel.com/1080/450/nature/1" alt="Slide 1" /></li>
-      <li><img src="http://lorempixel.com/1080/450/nature/2" alt="Slide 2" /></li>
-      <li><img src="http://lorempixel.com/1080/450/nature/3" alt="Slide 3" /></li>
-    </ul>
-  </div>
-</div>
-
-<div class="row">
-  <div class="large-6 columns">
-    <p>
-    Fingerstache fashion axe eu Neutra, id proident blog consectetur High Life veniam Blue Bottle typewriter plaid pop-up. You probably haven't heard of them Pinterest consectetur minim, excepteur whatever chia narwhal skateboard polaroid High Life voluptate Helvetica banh mi Shoreditch. Organic leggings ugh, keytar pug Shoreditch Godard polaroid authentic Banksy brunch Neutra Tumblr dreamcatcher. Sint adipisicing keytar Brooklyn deserunt, pork belly sapiente cupidatat. Ad trust fund 90's cray. Id eiusmod shabby chic, aesthetic readymade keffiyeh chia kitsch post-ironic raw denim accusamus. Brunch vegan messenger bag normcore, magna literally labore laboris nesciunt placeat.
-
-    Umami proident enim accusamus chillwave. Keffiyeh cillum meggings try-hard accusamus vero. Pour-over ad ullamco American Apparel, readymade McSweeney's esse master cleanse velit. Sriracha odio dreamcatcher locavore eiusmod pug. Enim scenester ethical Godard Echo Park. Odio irony flannel hoodie semiotics, accusamus velit keytar nesciunt laboris roof party Etsy ut. Hoodie pork belly food truck, photo booth reprehenderit whatever pariatur Helvetica leggings farm-to-table church-key Vice.
-    </p>
-  </div>
-  <div class="large-6 columns">
-    <p>
-      Cupidatat Marfa cillum delectus squid viral. Est tattooed assumenda, post-ironic dolor tousled bicycle rights. Schlitz post-ironic Austin magna. Pour-over blog sartorial disrupt placeat, seitan gentrify cred cliche. Readymade fixie laborum, commodo Odd Future voluptate small batch pariatur skateboard nesciunt qui 90's laboris ut. Tonx ennui stumptown, kale chips actually nihil artisan bitters chambray semiotics nesciunt odio magna American Apparel eu. 90's nesciunt paleo 8-bit YOLO VHS.
-
-      Echo Park pop-up Pinterest, ut cliche salvia tofu shabby chic beard. Incididunt voluptate iPhone PBR mollit banjo accusamus. Nulla et officia, narwhal DIY ullamco Tonx leggings eu aesthetic. Lo-fi Pitchfork id laborum qui freegan. 3 wolf moon banjo placeat, veniam farm-to-table food truck esse labore occaecat Neutra anim mixtape. Mustache Blue Bottle Etsy cornhole Cosby sweater, kale chips cray pariatur pour-over food truck PBR&B pug. Schlitz laboris fixie, meh High Life Austin cornhole accusamus.
-    </p>
-  </div>
+    <div class="row fullwidth">
+        <img src="images/Daniel_Parks_East_Bay.jpg" height="1368" width="2048">
+    </div>
 </div>
 
 </body>
