--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -14,20 +14,12 @@
 <body>
 
 <div class="hioebMainContainer">
-    <div class="row fullwidth">
-        <div class="top-bar">
-            <div class="top-bar-left">
-                THING LEFT
-            </div>
-<!-- PLACE BELOW IMAGE AS BACKGROUND HERE -->
-            <div class="top-bar-right">
-                THING RIGHT
+    <div class="row fullWidth" id="titleBanner">
+        <div class="12-large columns">
+            <div class="row">
+                <div class="large-3 columns">HIOEB</div>
             </div>
         </div>
-    </div>
-
-    <div class="row fullwidth">
-        <img src="images/Daniel_Parks_East_Bay.jpg" height="1368" width="2048">
     </div>
 </div>
 
