Google Font Lato import; title font sizing

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type ="text/css" href="stylesheets/normalize.css">
   <link rel="stylesheet" type ="text/css" href="stylesheets/main.css">
   <link rel="stylesheet" type ="text/css" href="stylesheets/foundation.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/foundation.min.js"></script>
 
@@ -17,7 +18,13 @@
     <div class="row fullWidth" id="titleBanner">
         <div class="12-large columns">
             <div class="row">
-                <div class="large-3 columns">HIOEB</div>
+                <div class="large-4 columns">
+                    <h1 id="titleText">health insurance options <span>east bay</span></h1>
+                </div>
+
+                <div class="large-1 columns large-offset-7">
+                    <h5 class="navLink">contact</h5>
+                </div>
             </div>
         </div>
     </div>
