--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type ="text/css" href="stylesheets/normalize.css">
   <link rel="stylesheet" type ="text/css" href="stylesheets/main.css">
   <link rel="stylesheet" type ="text/css" href="stylesheets/foundation.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:100,400,700' rel='stylesheet' type='text/css'>
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/foundation.min.js"></script>
 
@@ -22,11 +22,25 @@
                     <h1 id="titleText">health insurance options <span>east bay</span></h1>
                 </div>
 
-                <div class="large-1 columns large-offset-7">
-                    <h5 class="navLink">contact</h5>
+                <div class="large-1 columns large-offset-6">
+                    <h5 class="navLink"><a href="#" class="navLinkText">about</a></h5>
+                </div>
+
+                <div class="large-1 columns">
+                    <h5 class="navLink"><a href="#" class="navLinkText">contact</a></h5>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="row">
+        <div class="large-6 columns large-centered">
+            <h2 class="thinSectionTitle">what we can do for you</h2>
+        </div>
+    </div>
+
+    <div class="row fullWidth" id="servicesRow">
+        <div class="large-12 columns">NEXT STUFF GOES HERE</div>
     </div>
 </div>
 
