--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -22,12 +22,16 @@
                     <h1 id="titleText">health insurance options <span>east bay</span></h1>
                 </div>
 
-                <div class="large-1 columns large-offset-6">
-                    <h5 class="navLink"><a href="#" class="navLinkText">about</a></h5>
+                <div class="large-1 columns large-offset-5">
+                    <h5 class="navLink text-center"><a href="#" class="navLinkText">services</a></h5>
                 </div>
 
                 <div class="large-1 columns">
-                    <h5 class="navLink"><a href="#" class="navLinkText">contact</a></h5>
+                    <h5 class="navLink text-center"><a href="#" class="navLinkText">about</a></h5>
+                </div>
+
+                <div class="large-1 columns">
+                    <h5 class="navLink text-center"><a href="#" class="navLinkText">contact</a></h5>
                 </div>
             </div>
         </div>
