fiddling with viewport height; next up, get both sections displayed on page load

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Lato:100,400,700' rel='stylesheet' type='text/css'>
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/foundation.min.js"></script>
+  <script src="js/main.js"></script>
 
   <title>Health Insurance Options East Bay</title>
 </head>
@@ -35,11 +36,11 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="large-6 columns large-centered">
-            <h2 class="thinSectionTitle">what we can do for you</h2>
+        <div class="row doForYou">
+            <div class="large-6 columns large-centered">
+                <h2 class="thinSectionTitle">what we can do for you</h2>
+            </div>
         </div>
     </div>
 
