Starting map embed for contact section

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -47,6 +47,15 @@
     <div class="row fullWidth" id="servicesRow">
         <div class="large-12 columns">NEXT STUFF GOES HERE</div>
     </div>
+
+    <div class="row fullWidth" id="contactRow">
+        <div class="large-12 columns">
+            MAP
+            <div id="mapEmbed">
+                <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=374%20Jackson%20St%2C%20Hayward%2C%20CA%2C%20United%20States&key=AIzaSyB3b7iv_95qYB_Q7isNEX3BHtAzdvRFrpc" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
