Fleshing out contacts section

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -45,12 +45,31 @@
     </div>
 
     <div class="row fullWidth" id="servicesRow">
-        <div class="large-12 columns">NEXT STUFF GOES HERE</div>
+        <div class="large-12 columns">SERVICES STUFF GOES HERE</div>
     </div>
 
     <div class="row fullWidth" id="contactRow">
-        <div class="large-12 columns">
-            MAP
+        <div class="large-6 columns">
+            <div class="row">
+                <div class="large-6 large-offset-2 columns">374 Jackson Street, Suite A</div>
+            </div>
+
+            <div class="row">
+                <div class="large-6 large-offset-2 columns">Hayward, CA. 94544</div>
+            </div>
+
+            <div class="row">
+                <div class="large-6 large-offset-2 columns">Phone: (510)XXX-XXXX</div>
+            </div>
+
+            <div class="row">
+                <div class="large-6 large-offset-2 columns">
+                    <a href="mailto:someone@yoursite.com">Email Us</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="large-6 columns">
             <div id="mapEmbed">
                 <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=374%20Jackson%20St%2C%20Hayward%2C%20CA%2C%20United%20States&key=AIzaSyB3b7iv_95qYB_Q7isNEX3BHtAzdvRFrpc" allowfullscreen></iframe>
             </div>
