Fixed pageload JS issue; next up is scrolling nav click

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -24,15 +24,15 @@
                 </div>
 
                 <div class="large-1 columns large-offset-5">
-                    <h5 class="navLink text-center"><a href="#" class="navLinkText">services</a></h5>
+                    <h5 class="navLink text-center"><a href="#" id="servicesLink" class="navLinkText">services</a></h5>
                 </div>
 
                 <div class="large-1 columns">
-                    <h5 class="navLink text-center"><a href="#" class="navLinkText">about</a></h5>
+                    <h5 class="navLink text-center"><a href="#" id="aboutLink" class="navLinkText">about</a></h5>
                 </div>
 
                 <div class="large-1 columns">
-                    <h5 class="navLink text-center"><a href="#" class="navLinkText">contact</a></h5>
+                    <h5 class="navLink text-center"><a href="#" id="contactLink" class="navLinkText">contact</a></h5>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="row">
-                <div class="large-6 large-offset-2 columns">Phone: (510)XXX-XXXX</div>
+                <div class="large-6 large-offset-2 columns">Phone: (510) XXX-XXXX</div>
             </div>
 
             <div class="row">
