scrolling links work; need to find out why links are still blue

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -24,15 +24,15 @@
                 </div>
 
                 <div class="large-1 columns large-offset-5">
-                    <h5 class="navLink text-center"><a href="#" id="servicesLink" class="navLinkText">services</a></h5>
+                    <h5 class="navLink text-center"><a href="javascript:void(0);" onclick="scrollToServices();" id="servicesLink" class="navLinkText">services</a></h5>
                 </div>
 
                 <div class="large-1 columns">
-                    <h5 class="navLink text-center"><a href="#" id="aboutLink" class="navLinkText">about</a></h5>
+                    <h5 class="navLink text-center"><a href="javascript:void(0);" onclick="scrollToContact();" id="contactLink" class="navLinkText">contact</a></h5>
                 </div>
 
                 <div class="large-1 columns">
-                    <h5 class="navLink text-center"><a href="#" id="contactLink" class="navLinkText">contact</a></h5>
+                    <h5 class="navLink text-center"><a href="javascript:void(0);" id="aboutLink" class="navLinkText">about</a></h5>
                 </div>
             </div>
         </div>
