Start to flesh out services section

--- a/hioeb/public/index.html
+++ b/hioeb/public/index.html
@@ -41,6 +41,20 @@
     <div class="row doForYou">
         <div class="large-6 columns large-centered">
             <h2 class="thinSectionTitle">what we can do for you</h2>
+
+            <div class="row">
+                <div class="large-4 columns">
+                    Covered California
+                </div>
+
+                <div class="large-4 columns">
+                    Anthem Blue Cross
+                </div>
+
+                <div class="large-4 columns">
+                    Something Else
+                </div>
+            </div>
         </div>
     </div>
 
